--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"firebase": "^5.3.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^23.3.0",
+		"npm": "^6.3.0",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-router-dom": "^4.3.1",
